--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
+  .toolbar-background-md {
+    background-color: map-get($colors, primary ) !important;
+  }
 
+  .toolbar-title-md {
+    color: map-get($colors, word ) !important;
+  }
+
+  .bar-button-default-md {
+    color: map-get($colors, word ) !important;
+  }
 }
